Day 7 Code Commit - Commenting System Part 5

--- a/Database Schemas/PHPWebFramework.mediawiki
+++ b/Database Schemas/PHPWebFramework.mediawiki
@@ -1,5 +1,23 @@
 
 <!--
+Table data for `comments`
+-->
+
+{| class="wikitable sortable" style="text-align:center;"
+|+'''comments'''
+|-
+ ! id
+ ! postid
+ ! parentid
+ ! userid
+ ! timeposted
+ ! timeedited
+ ! description
+ ! currentnestedlevel
+|}
+
+
+<!--
 Table data for `facebook_users`
 -->
 
